general logging, access logging, security logging and dm logging added

--- a/src/vscp/daemon/win32/vscpd.vcxproj.filters
+++ b/src/vscp/daemon/win32/vscpd.vcxproj.filters
@@ -111,7 +111,7 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="..\..\common\udpclientthread.h">
-      <Filter>Source Files</Filter>
+      <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
