Fixed possible problems with variablenames including space

--- a/src/vscp/daemon/win32/vscpd.vcxproj
+++ b/src/vscp/daemon/win32/vscpd.vcxproj
@@ -567,6 +567,7 @@
     <ClInclude Include="..\..\..\common\md5.h" />
     <ClInclude Include="..\..\common\tables.h" />
     <ClInclude Include="..\..\common\udpclientthread.h" />
+    <ClInclude Include="..\..\common\vscpdlldef.h" />
     <ClInclude Include="..\..\common\vscpeventhelper.h" />
     <ClInclude Include="..\..\common\vscphelper.h" />
     <ClInclude Include="..\..\common\vscpremotetcpif.h" />
