Fixed problem with non closing connection on Linux

--- a/src/vscp/daemon/linux/Makefile.in
+++ b/src/vscp/daemon/linux/Makefile.in
@@ -10,8 +10,8 @@ top_wxsrcdir = @top_wxsrcdir@
 top_builddir = @top_builddir@
 top_wxbuilddir = @top_wxbuilddir@
 CXX = @CXX@
-CXXFLAGS = -DNOEMBED_NET_SKELETON @CXXFLAGS@
-CPPFLAGS = @CPPFLAGS@
+CXXFLAGS =  @CXXFLAGS@
+CPPFLAGS = -DNOEMBED_NET_SKELETON @CPPFLAGS@
 LDFLAGS = @LDFLAGS@
 EXTRALIBS = @EXTRALIBS@
 STRIP = strip
