--- a/configure.in
+++ b/configure.in
@@ -1,7 +1,7 @@
 dnl Autoconf settings for VSCP
 dnl $Id: configure.in,v 1.5 2005/10/03 16:30:06 akhe Exp $
 
-AC_INIT(vscp, [0.4.0], [can-vscp@lists.sf.net])
+AC_INIT(vscp, [0.4.0], [akhe@grodansparadis.com])
 
 CONFIGURE_LINE="$0 $*"
 CODENAME="Ant"
@@ -32,8 +32,6 @@ AC_CHECK_LIB([pthread], [pthread_create])
 AC_CHECK_LIB([crypto], [MD5_Init])
 AC_CHECK_LIB([m],[sin])
 AC_CHECK_LIB([z], [gzopen])
-AC_CHECK_LIB([websockets], [libwebsocket_create_context])
-AC_CHECK_LIB([microhttpd], [MHD_start_daemon])
 AC_CHECK_LIB([pcap], [pcap_open_live])
 AC_CHECK_LIB([mosquittopp], [_init])
 
@@ -41,7 +39,7 @@ AC_CHECK_LIB([mosquittopp], [_init])
 AC_HEADER_DIRENT
 AC_HEADER_STDC
 AC_HEADER_SYS_WAIT
-AC_CHECK_HEADERS([OS.h arpa/inet.h fcntl.h inttypes.h limits.h locale.h netdb.h netinet/in.h sgtty.h stddef.h stdint.h stdlib.h string.h strings.h sys/file.h sys/ioctl.h sys/socket.h sys/time.h sys/timeb.h syslog.h termios.h unistd.h openssl/md5.h libwebsockets.h])
+AC_CHECK_HEADERS([OS.h arpa/inet.h fcntl.h inttypes.h limits.h locale.h netdb.h netinet/in.h sgtty.h stddef.h stdint.h stdlib.h string.h strings.h sys/file.h sys/ioctl.h sys/socket.h sys/time.h sys/timeb.h syslog.h termios.h unistd.h openssl/md5.h ])
 
 # Checks for typedefs, structures, and compiler characteristics.
 AC_HEADER_STDBOOL
