--- a/src/vscp/daemon/linux/Makefile.in
+++ b/src/vscp/daemon/linux/Makefile.in
@@ -33,7 +33,7 @@ DESTDIR =
 WX_RELEASE = 2.8
 LIBDIRNAME = $(top_wxbuilddir)lib
 
-VSCPD_OBJECTS =  vscpd.o ../../common/daemonvscp.o ../../common/clientlist.o ../../common/controlobject.o ../../common/devicelist.o ../../common/vscphelper.o ../../common/vscpeventhelper.o ../../common/tcpipclientthread.o ../../common/dm.o ../../common/vscpvariable.o ../../common/interfacelist.o ../../common/userlist.o ../../common/devicethread.o ../../common/vscpremotetcpif.o ../../common/guid.o ../../common/vscpwebserver.o ../../common/udpclientthread.o ../../common/tables.o ../../../common/dllist.o ../../../common/configfile.o ../../../common/crc.o ../../../common/md5.o ../../../common/randpassword.o ../../../common/mongoose.o  ../../../common/slre.o ../../../common/frozen.o ../../../common/v7.o 
+VSCPD_OBJECTS =  vscpd.o ../../common/daemonvscp.o ../../common/clientlist.o ../../common/controlobject.o ../../common/devicelist.o ../../common/vscphelper.o ../../common/vscpeventhelper.o ../../common/tcpipclientthread.o ../../common/dm.o ../../common/vscpvariable.o ../../common/interfacelist.o ../../common/userlist.o ../../common/devicethread.o ../../common/vscpremotetcpif.o ../../common/guid.o ../../common/vscpwebserver.o ../../common/udpclientthread.o ../../common/tables.o ../../../common/dllist.o ../../../common/configfile.o ../../../common/crc.o ../../../common/md5.o ../../../common/randpassword.o ../../../common/net_skeleton.o ../../../common/mongoose.o  ../../../common/slre.o ../../../common/frozen.o ../../../common/v7.o 
 
 ### Targets: ###
 
