--- a/src/vscp/drivers/level2/mqtt/linux/Makefile.in
+++ b/src/vscp/drivers/level2/mqtt/linux/Makefile.in
@@ -35,7 +35,7 @@ DLLPREFIX = lib
 WX_RELEASE = 2.6
 LIBDIRNAME = $(top_wxbuilddir)lib
 
-MQTT_OBJECTS = mqtt.o ../../../../../common/crc.o ../../../../common/vscptcpif.o ../../../../common/vscphelper.o ../../../../common/guid.o
+MQTT_OBJECTS = mqtt.o ../../../../../common/crc.o ../../../../common/vscpremotetcpif.o ../../../../common/vscphelper.o ../../../../common/guid.o
 PROJOBJS =  mqtt.o ../../../../../common/crc.o ../../../../common/vscptcpif.o ../../../../common/vscphelper.o ../../../../common/guid.o
 
 
