Fixed file rename issues on Linux

--- a/src/vscp/drivers/level2/socketcan/linux/Makefile.in
+++ b/src/vscp/drivers/level2/socketcan/linux/Makefile.in
@@ -36,7 +36,7 @@ WX_RELEASE = 2.6
 LIBDIRNAME = $(top_wxbuilddir)lib
 
 SOCKETCAN_OBJECTS = socketcan.o ../../../../../common/crc.o ../../../../common/vscpremotetcpif.o ../../../../common/vscphelper.o ../../../../common/guid.o
-PROJOBJS =  socketcan.o ../../../../../common/crc.o ../../../../common/vscptcpif.o ../../../../common/vscphelper.o ../../../../common/guid.o
+PROJOBJS =  socketcan.o ../../../../../common/crc.o ../../../../common/vscpremotetcpif.o ../../../../common/vscphelper.o ../../../../common/guid.o
 
 
 
