--- a/src/vscp/helperlib/linux/Makefile.in
+++ b/src/vscp/helperlib/linux/Makefile.in
@@ -36,7 +36,7 @@ WX_RELEASE = 2.8
 LIBDIRNAME = $(top_wxbuilddir)lib
 
 VSCPHELPER_OBJECTS =  libvscphelper.o ../../common/vscpremotetcpif.o ../../common/vscphelper.o ../../common/guid.o ../../../common/crc.o
-PROJOBJS        =  ../../common/vscptcpif.o ../../common/vscphelper.o  ../../../common/crc.o ../../common/guid.o
+PROJOBJS        =  ../../common/vscpremotetcpif.o ../../common/vscphelper.o  ../../../common/crc.o ../../common/guid.o
 
 
 
