--- a/configure.in
+++ b/configure.in
@@ -31,6 +31,7 @@ AC_CHECK_LIB([dl], [dlsym])
 AC_CHECK_LIB([pthread], [pthread_create])
 AC_CHECK_LIB([crypto], [MD5_Init])
 AC_CHECK_LIB([m],[sin])
+AC_CHECK_LIB([rt],[clock_gettime])
 AC_CHECK_LIB([z], [gzopen])
 AC_CHECK_LIB([pcap], [pcap_open_live])
 AC_CHECK_LIB([mosquittopp], [_init])
