Automation object added

--- a/src/vscp/daemon/win32/vscpd.vcxproj
+++ b/src/vscp/daemon/win32/vscpd.vcxproj
@@ -567,6 +567,7 @@
     <ClInclude Include="..\..\..\common\md5.h" />
     <ClInclude Include="..\..\common\tables.h" />
     <ClInclude Include="..\..\common\udpclientthread.h" />
+    <ClInclude Include="..\..\common\vscpautomation.h" />
     <ClInclude Include="..\..\common\vscpdlldef.h" />
     <ClInclude Include="..\..\common\vscpeventhelper.h" />
     <ClInclude Include="..\..\common\vscphelper.h" />
@@ -604,6 +605,7 @@
     <ClCompile Include="..\..\common\tcpipclientthread.cpp" />
     <ClCompile Include="..\..\common\udpclientthread.cpp" />
     <ClCompile Include="..\..\common\userlist.cpp" />
+    <ClCompile Include="..\..\common\vscpautomation.cpp" />
     <ClCompile Include="..\..\common\vscpeventhelper.cpp" />
     <ClCompile Include="..\..\common\vscpremotetcpif.cpp" />
     <ClCompile Include="..\..\common\vscpwebserver.cpp" />
