--- a/src/vscp/drivers/level2/tcpdrv/linux/Makefile.in
+++ b/src/vscp/drivers/level2/tcpdrv/linux/Makefile.in
@@ -35,8 +35,8 @@ DLLPREFIX = lib
 WX_RELEASE = 2.6
 LIBDIRNAME = $(top_wxbuilddir)lib
 
-VSCPTCPIP_OBJECTS = vscptcpiplink.o ../../../../../common/crc.o ../../../../common/vscpremotetcpif.o ../../../../common/vscphelper.o ../../../../common/guid.o
-PROJOBJS =  vscptcpiplink.o ../../../../../common/crc.o ../../../../common/vscpremotetcpif.o ../../../../common/vscphelper.o ../../../../common/guid.o
+VSCPTCPIP_OBJECTS = vscptcpiplink.o ../../../../../common/crc.o ../../../../../common/crc8.o ../../../../common/vscpremotetcpif.o ../../../../common/vscphelper.o ../../../../common/guid.o
+PROJOBJS =  vscptcpiplink.o ../../../../../common/crc.o ../../../../../common/crc8.o ../../../../common/vscpremotetcpif.o ../../../../common/vscphelper.o ../../../../common/guid.o
 
 
 
