Fixed compile problem in uvscpd

--- a/src/vscp/linuxvscpl2/Makefile.in
+++ b/src/vscp/linuxvscpl2/Makefile.in
@@ -35,7 +35,7 @@ DLLPREFIX = lib
 WX_RELEASE = 2.6
 LIBDIRNAME = $(top_wxbuilddir)lib
 
-VSCPL1_OBJECTS =  vscpl2.o  ../common/vscpremotetcpif.o ../common/vscp.o ../../common/crc.o
+VSCPL1_OBJECTS =  vscpl2.o  ../common/vscpremotetcpif.o ../common/vscp.o ../../common/crc.o ../../common/crc.o 
 PROJOBJS        =  ../common/vscpremotetcpif.o ../common/vscp.o  ../../common/crc.o ../../common/crc8.o
 
 
