--- a/src/vscp/helperlib/windows/VSCP helper dll.vcxproj
+++ b/src/vscp/helperlib/windows/VSCP helper dll.vcxproj
@@ -264,12 +264,13 @@ if exist "$(VSCP_HOME)\src\vscp\Build\$(ConfigurationName)" copy /Y "$(OutDir)/$
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="..\..\..\common\crc8.c" />
     <ClCompile Include="..\..\common\canalsuperwrapper.cpp" />
     <ClCompile Include="..\..\..\common\crc.c" />
     <ClCompile Include="..\..\common\dllwrapper.cpp" />
     <ClCompile Include="..\..\common\guid.cpp" />
     <ClCompile Include="..\..\common\vscphelper.cpp" />
-    <ClCompile Include="..\..\common\vscptcpif.cpp" />
+    <ClCompile Include="..\..\common\vscpremotetcpif.cpp" />
     <ClCompile Include="dlldrvobj.cpp" />
     <ClCompile Include="stdafx.cpp" />
     <ClCompile Include="vscphelperdll.cpp" />
