--- a/Makefile.in
+++ b/Makefile.in
@@ -17,6 +17,7 @@ clean:
 install:
 	@for d in $(PROJ_SUBDIRS); do (cd $$d && $(MAKE) install); done
 	lsb_release -i
+        mkdir -p /srv/vscp/logs
 	mkdir -p /srv/vscp/actions
 	mkdir -p /srv/vscp/web
 	mkdir -p /etc/vscp
@@ -27,5 +28,5 @@ install:
 	$(INSTALL_PROGRAM) -b -m744 config_examples/mimetypes.xml_distro /etc/vscp/mimetypes.xml
 	$(INSTALL_PROGRAM) -b -m744 config_examples/variables.xml_distro /etc/vscp/variables.xml
 	$(INSTALL_PROGRAM) -b -m744 config_examples/dm.xml_distro /etc/vscp/dm.xml
-	$(INSTALL_PROGRAM) -b -m744 config_examples/vscpd.conf_distro /etc/vscp/vscpd.conf
+	$(INSTALL_PROGRAM) -b -m744 config_examples/vscpd.conf_unix_distro /etc/vscp/vscpd.conf
 
