--- a/configure.in
+++ b/configure.in
@@ -1,7 +1,7 @@
 dnl Autoconf settings for VSCP
 dnl $Id: configure.in,v 1.5 2005/10/03 16:30:06 akhe Exp $
 
-AC_INIT(vscp, [1.0.0], [akhe@grodansparadis.com])
+AC_INIT(vscp, [1.0.0], [info@grodansparadis.com])
 
 CONFIGURE_LINE="$0 $*"
 CODENAME="Ant"
@@ -73,7 +73,6 @@ AC_CHECK_FUNCS([alarm bzero dup2 floor gethostbyname gethostname gethrtime getti
 AC_SUBST(WXLIBS)
 AC_SUBST(EXTRALIBS)
 
-
 dnl
 dnl Project Sub directories
 dnl
@@ -84,10 +83,19 @@ PROJ_SUBDIRS_GUI="src/vscp/vscpworks"
 AC_SUBST(PROJ_SUBDIRS_GUI)
 
 dnl
+dnl SSL mode
+dnl
+vscp_ssl=no
+AC_ARG_ENABLE(ssl,
+[  --enable-ssl            ssl build (default disabled)],
+[vscp_ssl=yes])
+dnl test "${vscp_ssl}" != "yes" && vscp_ssl="no"
+
+
+dnl
 dnl  Debugging mode
 dnl
 
-dnl No debug build is default
 vscp_debug=no
 AC_ARG_ENABLE(debug,
 [  --enable-debug          debug mode (default disabled)],
@@ -106,6 +114,7 @@ AC_ARG_ENABLE(unicode,
 [  --enable-unicode        UNICODE build (default Unicode build)],
 [vscp_unicode=yes])
 dnl test "${vscp_unicode}" != "yes" && vscp_unicode="no"
+
 
 
 dnl
@@ -143,10 +152,20 @@ if test "$wxWin" != 1; then
         wxWidgets version is $reqwx or above.
     ])
 fi
+
+
+if test "${vscp_ssl}" = yes ; then
+    SSLFLAGS = "-D NS_ENABLE_SSL"
+    AC_SUBST(SSLFLAGS)
+    echo "SSL Build"
+else
+    SSLFLAGS = "-D tttt"
+    echo "non SSL Build"
+fi
  
 CPPFLAGS="$CPPFLAGS $WX_CPPFLAGS"
 CXXFLAGS="$CXXFLAGS $WX_CXXFLAGS_ONLY"
-CFLAGS="$CFLAGS $WX_CFLAGS_ONLY"
+CFLAGS="$CFLAGS $WX_CFLAGS_ONLY $SSLFLAGS"
 LIBS="$LIBS $WX_LIBS"
 
 WX_BASENAME=`$WX_CONFIG_WITH_ARGS --basename`
@@ -160,6 +179,12 @@ if sh -c "$WX_CONFIG_WITH_ARGS --basename" 2>/dev/null | grep wx_gtk2 >/dev/null
 fi
 
 EXTRALIBS="${EXTRALIBS} ${LIBS}" 
+
+if test "${vscp_ssl}" = yes ; then
+   CPPFLAGS="$CPPFLAGS -D NS_ENABLE_SSL"
+   CFLAGS="$CFLAGS -D NS_ENABLE_SSL"
+fi
+
 
 
 dnl 
@@ -205,7 +230,7 @@ echo   "           VSCP configuration"
 echo   "--------------------------------------------"
 echo   "VSCP version          : ${PACKAGE_VERSION}"
 echo   "System                : ${host}"
-echo   "Architecture          : ${ARCH}"
+echo   "Architecture          : ${arch}"
 echo   "VSCP GUI Build        : ${vscp_gui}"
 
 if test "${vscp_debug}" = "yes" 
@@ -218,18 +243,25 @@ fi
 
 if test "${vscp_unicode}" = "yes" 
 then
-   printf "UNICODE 
-"
+   printf "UNICODE "
 else
-   printf "ANSI 
-"
+   printf "ANSI "
 fi
+
+if test "${vscp_ssl}" = "yes"
+then
+   printf "SSL "
+else
+   printf "non-SSL "
+fi
+
 
 printf " 
 You can tune the compiler flags in vscp-config.
 To build VSCP and friends, type \'make\' followed by \'make install\'
 
  use --enable-debug to build a debug version; release is default.
+ use --enable-ssl to build a SSL version of executables; Non SSL is default.
  use --disable-unicode to build an Ansi version; Unicode is default.
 
 "
