--- a/configure.in
+++ b/configure.in
@@ -34,6 +34,7 @@ AC_CHECK_LIB([m],[sin])
 AC_CHECK_LIB([rt],[clock_gettime])
 AC_CHECK_LIB([z], [gzopen])
 AC_CHECK_LIB([pcap], [pcap_open_live])
+AC_CHECK_LIB([ssl], [SSL_free])
 AC_CHECK_LIB([mosquittopp], [_init])
 
 # Checks for header files.
@@ -154,15 +155,6 @@ if test "$wxWin" != 1; then
 fi
 
 
-if test "${vscp_ssl}" = yes ; then
-    SSLFLAGS = "-D NS_ENABLE_SSL"
-    AC_SUBST(SSLFLAGS)
-    echo "SSL Build"
-else
-    SSLFLAGS = "-D tttt"
-    echo "non SSL Build"
-fi
- 
 CPPFLAGS="$CPPFLAGS $WX_CPPFLAGS"
 CXXFLAGS="$CXXFLAGS $WX_CXXFLAGS_ONLY"
 CFLAGS="$CFLAGS $WX_CFLAGS_ONLY $SSLFLAGS"
