--- a/Makefile.in
+++ b/Makefile.in
@@ -19,7 +19,12 @@ install:
 	lsb_release -i
 	mkdir -p /srv/vscp/actions
 	mkdir -p /srv/vscp/web
+	mkdir -p /srv/vscp/web/css
+	mkdir -p /srv/vscp/web/images
+	mkdir -p /srv/vscp/web/lib
+	mkdir -p /srv/vscp/web/testws
 	mkdir -p /srv/vscp/logs
+	mkdir -p /srv/vscp/tables
 	mkdir -p /etc/vscp
 	$(INSTALL_PROGRAM) -b -m755 vscpd.startup_script_debian /etc/init.d/vscpd
 	update-rc.d vscpd defaults
