Fixed compile errors in wxWidgets 3.0.2 Clean paths where wrong for several libs - fixed.

--- a/src/vscp/drivers/level2/lmsensors/linux/Makefile.in
+++ b/src/vscp/drivers/level2/lmsensors/linux/Makefile.in
@@ -55,8 +55,10 @@ clean:
 	rm -rf ./.deps ./.pch
 	rm -f ./*.o
 	rm -f ../common/*.o
+	rm -f ../../common/*.o
 	rm -f ../../../common/*.o
 	rm -f ../../../../common/*.o
+	rm -f ../../../../../common/*.o
 	rm -f vscp2drv_lmsensors.so
 	rm -f test
 
