--- a/src/vscp/drivers/level1/lincan/linux/Makefile.in
+++ b/src/vscp/drivers/level1/lincan/linux/Makefile.in
@@ -53,6 +53,8 @@ clean:
 	rm -rf ./.deps ./.pch
 	rm -f ./*.o
 	rm -f ../common/*.o
+	rm -f ../../../../common/*.o
+	rm -f ../../../../../common/*.o
 	rm -f canallincan.so
 	rm -f test
 
