--- a/src/vscp/drivers/level2/socketcan/linux/Makefile.in
+++ b/src/vscp/drivers/level2/socketcan/linux/Makefile.in
@@ -57,6 +57,7 @@ clean:
 	rm -f ../common/*.o
 	rm -f ../../../common/*.o
 	rm -f ../../../../common/*.o
+	rm -f ../../../../../common/*.o
 	rm -f vscp2drv_socketcan.so
 	rm -f test
 
