--- a/src/vscp/linuxvscpl1/Makefile.in
+++ b/src/vscp/linuxvscpl1/Makefile.in
@@ -55,6 +55,7 @@ clean:
 	rm -rf ./.deps ./.pch
 	rm -f ./*.o
 	rm -f ../common/*.o
+	rm -f ../../common/*.o
 	rm -f ../../../common/*.o
 	rm -f ../../../../common/*.o
 	rm -f vscpl1.so
